HTML Pt. 1 finished.

--- a/module-3/02_CSS_Selectors/student-lecture/task_manager/index.html
+++ b/module-3/02_CSS_Selectors/student-lecture/task_manager/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css?family=Raleway"
       rel="stylesheet"
     />        
+    <link href="style.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -50,7 +51,7 @@
         <a href="#">Add another card</a>
       </div>
 
-      <!-- <div class="trello-list">
+      <div class="trello-list">
         <h2>Module 1 Week 1</h2>
         <ol class="cards">
           <li class="card">
