--- a/module-3/01_Intro_HTML_CSS/student-exercise/fan-page/index.html
+++ b/module-3/01_Intro_HTML_CSS/student-exercise/fan-page/index.html
@@ -4,11 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Twilight: The Bestest Stories Ever Made</title>
+    <title>The Twilight Saga: The Bestest Movies Ever Made</title>
 </head>
 <body>
-    <h1>Twilight: The Bestest Stories Ever Made</h1>
-    <img src="images/twilightcast.jpg">
-    
+    <header>
+        <h1>The Twilight Saga: The Bestest Movies Ever Made</h1>
+        <img src="images/twilightcast.jpg">
+    </header>
+
+    <table>
+        <h2>When The Twilight Saga was borne unto our unworthy Earth:</h2>
+        <tr>
+            <th>Entries in The Twilight Saga</th>
+            <th>Year of Release</th> 
+        </tr>
+        <tr>    
+            <td>Twilight</td>
+            <td>2008</td>
+        </tr>
+        <tr>
+            <td>New Moon</td>
+            <td>2009</td>
+        </tr>    
+        <tr>
+            <td>Eclipse</td>
+            <td>2010</td>
+        </tr>
+        <tr>
+            <td>Breaking Dawn - Part 1</td>
+            <td>2011</td>
+        </tr>
+        <tr>
+            <td>Breaking Dawn - Part 2</td>
+            <td>2012</td>
+        </tr>
+    </table>
+
+    <section>
+        <h2>Famous and romantic quotes from The Twilight Saga:</h2>
+        <ul>
+            <li>Edward Cullen: It's an extraordinary thing to meet someone who you can bare your soul to and accept you for what you are.</li>
+            <li>Bella Swan: These violet delights have violent ends. And in their triumph die, like fire and powder. Which, as they kiss, consume…</li>
+            <li>Jacob Black: I'm gonna fight for you, until your heart stops beating.</li>
+            </li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Internet hyperlinks regarding The Twilight Saga:</h2>
+        <ul>
+            <li><a href="https://en.wikipedia.org/wiki/The_Twilight_Saga_(film_series)">The Wikipedia entry on The Twilight Saga</a></li>
+            <li><a href="https://www.lionsgate.com/franchises/the-twilight-saga">The official website for The Twilight Saga</a></li>
+            <li><a href="https://stepheniemeyer.com/">The website of the genius author of The Twilight Saga, Stephenie Meyer</a></li>
+            </li>
+        </ul>
+    </section>
+
 </body>
 </html>
