HTML Pt. 2 finished.

--- a/module-3/01_Intro_HTML_CSS/student-exercise/fan-page/index.html
+++ b/module-3/01_Intro_HTML_CSS/student-exercise/fan-page/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Twilight Saga: The Bestest Movies Ever Made</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <header>
-        <h1>The Twilight Saga: The Bestest Movies Ever Made</h1>
+        <h1 class="thetitle">The Twilight Saga: The Bestest Movies Ever Made</h1>
         <img src="images/twilightcast.jpg">
     </header>
 
-    <table>
+    <table class="unworthyEarth">
         <h2>When The Twilight Saga was borne unto our unworthy Earth:</h2>
         <tr>
             <th>Entries in The Twilight Saga</th>
@@ -42,7 +43,7 @@
 
     <section>
         <h2>Famous and romantic quotes from The Twilight Saga:</h2>
-        <ul>
+        <ul class="quotes">
             <li>Edward Cullen: It's an extraordinary thing to meet someone who you can bare your soul to and accept you for what you are.</li>
             <li>Bella Swan: These violet delights have violent ends. And in their triumph die, like fire and powder. Which, as they kiss, consume…</li>
             <li>Jacob Black: I'm gonna fight for you, until your heart stops beating.</li>
@@ -52,7 +53,7 @@
 
     <section>
         <h2>Internet hyperlinks regarding The Twilight Saga:</h2>
-        <ul>
+        <ul class="links">
             <li><a href="https://en.wikipedia.org/wiki/The_Twilight_Saga_(film_series)">The Wikipedia entry on The Twilight Saga</a></li>
             <li><a href="https://www.lionsgate.com/franchises/the-twilight-saga">The official website for The Twilight Saga</a></li>
             <li><a href="https://stepheniemeyer.com/">The website of the genius author of The Twilight Saga, Stephenie Meyer</a></li>
