Cleaning up code.

--- a/module-3/01_Intro_HTML_CSS/student-exercise/fan-page/index.html
+++ b/module-3/01_Intro_HTML_CSS/student-exercise/fan-page/index.html
@@ -45,7 +45,7 @@
         <h2>Famous and romantic quotes from The Twilight Saga:</h2>
         <ul class="quotes">
             <li>Edward Cullen: It's an extraordinary thing to meet someone who you can bare your soul to and accept you for what you are.</li>
-            <li>Bella Swan: These violet delights have violent ends. And in their triumph die, like fire and powder. Which, as they kiss, consume…</li>
+            <li>Bella Swan: These violent delights have violent ends. And in their triumph die, like fire and sploosh. Which, as they kiss, consume…</li>
             <li>Jacob Black: I'm gonna fight for you, until your heart stops beating.</li>
             </li>
         </ul>
