Pre-class push.

--- a/module-3/05_Week_1_Review/student-lecture/luckySite/index.html
+++ b/module-3/05_Week_1_Review/student-lecture/luckySite/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="main.css">
     
     </head>
+<body>
 <header>
    <img class="logo" alt="Hoppy St. Patrick's Day" src="https://res.cloudinary.com/tech-elevator/image/upload/v1552080759/Learn%20To%20Code/HoppyMarchBanner.png" />
 </header>
@@ -51,4 +52,5 @@
    <p>Mark this very special occasion of St. Patrick's Day by buying a gift from our stunning array of items, shipped directly from Ireland. Make March 17th a day to remember.</p>
    <a href="#" class="store-button center">Store</a>
 </section>
+</body>
 </html>
