Shopping List finished.

--- a/module-3/09_Event_Handling/student-lecture/product-reviews/index.html
+++ b/module-3/09_Event_Handling/student-lecture/product-reviews/index.html
@@ -55,6 +55,9 @@
             <hr>
         </form>
 
+<!-- a temmmmmmmmmmmmplate -->
+
+
         <template id="review-template">
             <div class="review">
                 <h4></h4>
